app/client/style.css
/* Use Crete+Round as the default serif font. */
@import url("https://fonts.googleapis.com/css?family=Crete+Round");
@import url('https://fonts.googleapis.com/css2?family=ABeeZee&display=swap');

/* Set up some CSS variables to theme the application. */
:root {
  --matr-navbar-bg: #e3f2fd;
  --matr-navbar-bg-rgb: 236, 236, 236;
}

/* Change bootstrap variable values.
 See https://getbootstrap.com/docs/5.2/customize/css-variables/
 */
body {
  background: fixed center url("/images/piano-background.png");
  background-size: cover;
  font-family: 'ABeeZee', sans-serif;
  color: black;
}

#root a {
  color: #343434;
}

#root p {
  color: #ffffff;
}

/* Define custom styles */
.gray-background {
  background-color: var(--matr-navbar-bg);
  color: var(--bs-dark);
  padding-top: 10px;
  padding-bottom: 20px;
}

#nav-links {
  border-bottom: white 1px solid;
  width: 50vw;
  color: white;
  font-size: 18px;
}

#nav-links a {
  color: white;
  padding: 0 30px 0 10px;
}

#nav-links a:hover { color: #343434; }

#landing {
  overflow: auto;
}

#landing-center {
  height: 600px;
}

#info {
  background-color: #6BACD4;
}

#discover, #profile {
  min-height: 100vh;
}

#root .btn {
  border-color: white;
  background-color: rgba(0, 0, 0, 0.6);
  color: white;
}

#root .btn:hover {
  border-color: white;
  background-color: white;
  color: black;
}

#root .on-white:hover {
  border-color: black;
}

#root input:hover {
  border-color: black;
}

#navbar {
  background-color: #6BACD4;
}

h1, h2, h3 {
  font-family: "Crete Round", serif;
  color: #ffffff;
  display: block;
}

#discover h1, #discover p {
  color: black;
}

#profile h2, #profile p {
  color: black;
}

#discover-sidebar, #profile-sidebar {
  border: 1px solid black;
  border-radius: 5px;
  width: 300px;
}

#user-image {
  width: 150px;
}

#user-card-info {
  width: 200px;
}

